--- a/Style.css
+++ b/Style.css
@@ -1,79 +1,219 @@
-body,html,h1,h2,p, div,a,header{
-    margin: 0;
-    padding: 0;
-}
-*{box-sizing:border-box}
-
-header{  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; text-align: center; padding: 2em 0;}
-
-main{
-  width:94.75%;
-margin: 0 auto;
- overflow: hidden;
-}
-
-.col{
-    width: 30.333%;
-
-    
-    
-    float: left;
-    text-align: center;
-    padding:1rem;
-}
-.col1{ background:red; }
-.col2{ background:gold; }
-.col3{ background: green; }
-.col1,.col2,.col3{
-    border: 1px solid black;
-    margin-left:20px;
-    
-}
-
-.head{
-    margin: 0;
-    padding: 0;
-    background: black;
-    width: 35%;
-    position: relative;
-    left: 70%;
-    bottom: 16px;
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;  
-    border-right: 1px solid black;
-     
-    
-}
-.head1{
-    background: gold;
-
-}
-.head2{
-    background: green;
-
-}
-.head3{
-    background: red;
+body{
+	font: 15px/1.5 Arial, Helvetica,sans-serif;
+	padding: 0;
+	margin: 0;
+	background: #f4f4f4;
 
 }
 
+   /* Global */
+   .container{
+   	width: 80%;
+   	margin: auto;
+   	overflow: hidden;
+   }
 
-@media only screen and (max-width:768px){
-    
-    .col1, .col2{
-        width:45%;
-    }
-    .col3{
-        width:100%;
-    }
-    .col1,.col2,.col3{
-        margin: 5px;
-    }
+   ul{
+   	margin: 0;
+   	padding: 0;
+
+   }
+
+   .button_1{
+   	height: 38px;
+   	background: #e8491d;
+   	border: 0;
+   	padding-left: 20px;
+   	padding-right: 20px;
+   	color: #ffffff;
+   }  
+
+   .dark{
+   	padding: 15px;
+   	/*background: #35424a; Original color */
+      background: #6600ff;
+   	margin-top: 10px;
+   	margin-bottom: 10px;
+   	color: #ffffff;
+   }
+
+   /* Header */
+
+   header{
+   	/*background: #35424a; Original color */
+      background: #6600ff;
+   	color: #ffffff;
+   	padding-top: 30px;
+   	min-height: 70px;
+   	border-bottom: #e8491d 3px solid;
+ }
+
+header a{
+	color: #ffffff;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 15px;
+
+   }
+
+   header li{
+   	float: left;
+   	display: inline;
+   	padding: 0 20px 0 20px;
+   }
+
+   header #branding {
+   	float left: 
+   }
+
+   header #branding h1 {
+   	margin: 0;
+   }
+
+   header nav {
+   	float: right;
+   	margin-top: 10px;
+   }
+
+   header .highlight, header .current a{
+   	color: #e8491d;
+   	font-weight: bold;
+   }
+
+   header a:hover{
+   	color: #cccccc;
+   	font-weight: bold;
+   }
+
+   /* Show case */
+   #showcase{
+   	min-height: 400px;
+   	background: url(developer2.jpg);
+   	background-position: center;
+   	background-size: cover;
+   	text-align: center;
+   	color: #ffffff;
+   }
+
+   #showcase h1{
+   	margin-top: 100px;
+   	font-size: 55px;
+   	margin-bottom: 10px;
+  }
+
+   #showcase p{
+   	font-size: 20px;
+   }
+
+   /* News Letter */
+   #newsletter{
+   	padding: 15px;
+   	color: #ffffff;
+   	/*background: #35424a;Original color */
+      background: #6600ff;
+   }
+
+   #newsletter h1{
+   	float: right;
+   }
+
+   #newsletter form {
+   	float: left;
+   	margin-top: 15px;
+   }
+
+   #newsletter input[type="email"]{
+   	padding: 4px;
+   	height:25px;
+   	width: 250px;
+  }
+
+/* Boxes */
+#boxes {
+   margin-top: 20px;
 }
 
-@media only screen and (max-width:480px){
-    .col{
-       float: none;
-        width:100%;
-    }
+#boxes .box{
+   float: left;
+   text-align: center;
+   width: 30%;
+   padding: 10px;
 }
+
+#boxes .box img{
+   width: 90px;
+}
+
+/* Aside And Side bar */
+ aside#sidebar{
+   float: right;
+   width: 30%;
+   margin-top: 10px;
+ }
+
+ aside#sidebar .quote input, aside#sidebar .quote textarea{
+   width: 90%;
+   padding: 5px;
+ }
+ /* Main */
+ article#main-col{
+   float: left;
+   width: 65%;
+ }
+
+ /* Services */
+
+ ul#services li{
+   list-style: none;
+   padding: 20px;
+   border: #cccccc solid 1px;
+   margin-bottom: 5px;
+   background: #e6e6e6;
+ }
+
+ footer{
+   padding: 20px;
+   margin-top: 20px;
+   color: #ffffff;
+   /*background: #e8491d; Original color */
+   background: #6600ff;
+   text-align: center;
+ }
+
+ /* Media Querioes */
+ @media(max-width: 768px){
+   header #branding,
+    header nav,
+    header nav li,
+    #newsletter h1,
+    #newsletter form,
+    #boxes .box,
+    article#main-col,
+    aside#sidebar {
+      float: none;
+      text-align: center;
+      width: 100%;
+   }
+   header {
+      padding-bottom: 20px;
+   }
+
+   #showcase h1{
+      margin-top: 40px;
+   }
+
+   #newsletter button .quote button {
+      display: block;
+      width: 100%;
+   }
+
+   #newsletter form input[type="email"] .quote input .quote textarea 
+   {
+      width: 100%;
+      margin-bottom: 5px;
+   }
+ }
+
+
+
+
